# monorepo

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.dev  Dockerfile.kicad  Dockerfile.latex  README.md  docker-compose.yml  resistor.py
.github/workflows/: build.yml  ci.yml  code_style.yml  image.yml  kicad.yml  latex.yml  runner.yml
cmake/toolchains/: arm-none-eabi-gcc.cmake
docs/: bms_flow.dot  build.bash  manual.bib  manual.tex
docs/can/: inverter.dbc
docs/review/: 2025-09-24_14-48-39_telemetry_framing_review.md  2025-09-24_15-32-16_telemetry_implementation_review.md
manual/: .gitignore  manual.tex
scripts/: charge.py  charge_1.csv  current.py  merge_bom.py  resistor.py  view_charge.py
src/: apps.cc  apps_logic.cc  apps_logic.hh  bms.cc  bms.hh  bms_logic.cc  bms_master.cc  bus_logger.cc  can.cc  can.hh  config.hh  corsa.cc  dti.cc  dti.hh  eeprom.cc  eeprom.hh  etc.cc  freertos.cc  freertos.hh  hal.cc  hal.hh  i2c.cc  i2c.hh  logging_board.cc  loggingboard.cc  main.cc  max_adc.cc  max_adc.hh  miniprintf.h  telemetry_framing.cc  transmit.cc  util.hh
src/bms/: can_messages.cc  can_messages.hh  characterisation.cc  characterisation.hh  error.hh  freertos_config.h  master.cc  master_freertos_config.h  segment.cc  segment_freertos_config.h
src/charger/: can_messages.cc  can_messages.hh  charger.cc  error.hh  freertos_config.h
src/precharge/: freertos_config.h  precharge.cc
system/: startup_stm32f103c8tx.s
test/: bms_test.cc  dti_test.cc  util_test.cc
